--- a/app/components/Modal.module.css
+++ b/app/components/Modal.module.css
@@ -45,10 +45,14 @@
 }
 
 /* Add responsive behavior */
-@media (max-width: 850px) {
+@media (max-width: 765px) {
   .modal {
-    min-width: 95vw;
-    width: 95vw;
-    padding: 1rem;
+    min-width: 100dvw;
+    width: 95dvw;
+    padding: unset;
+    padding-top: 2rem;
+    border-radius: unset;
+    max-width: 100dvw;
+    max-height: 100dvh;
   }
 }
