--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -17,7 +17,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 10svw;
+  gap: calc(2svw + 1rem);
   flex-wrap: wrap;
 }
 
