--- a/app/speakers/list/[year]/SpeakersList.module.css
+++ b/app/speakers/list/[year]/SpeakersList.module.css
@@ -2,6 +2,7 @@
   padding: 2rem;
   max-width: 1400px;
   margin: 0 auto;
+  min-height: calc(100dvh - 146px)
 }
 
 .title {
@@ -274,7 +275,7 @@
 
 .exportButton {
   position: fixed;
-  top: 20px;
+  top: 70px;
   right: max(20px, calc((100vw - 1300px) / 2 + 20px));
   background-color: #217346;
   color: white;
