--- a/app/components/ModalBanner.module.css
+++ b/app/components/ModalBanner.module.css
@@ -115,6 +115,9 @@
 
 .content {
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
@@ -168,6 +171,21 @@
   padding-inline: 1rem;
   border-radius: 10px;
   background-color: transparent;
+}
+
+.imageContainer {
+width: auto;
+    max-height: 70dvh;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.bannerImage {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .logoContainer[data-has-bg="true"] {
